--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["blocking","json"] }
 scraper = "0.18.1"
 urlencoding = "2.1.3"
+strum = { version = "0.25", features = ["derive"] }
+regex = "1"
