--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ reqwest = { version = "0.11", features = ["blocking","json"] }
 scraper = "0.18.1"
 urlencoding = "2.1.3"
 strum = { version = "0.25", features = ["derive"] }
+strum_macros = {version = "0.25"}
 regex = "1"
