--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ urlencoding = "2.1.3"
 strum = { version = "0.25", features = ["derive"] }
 strum_macros = {version = "0.25"}
 regex = "1"
+edit-distance = {version = "2.1.0"}
