--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,16 @@ name = "wiktbot_rust"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["blocking","json"] }
+tokio = { version = "1.35.1", features = ["full"] }
+reqwest = { version = "0.11.23", features = ["blocking","json"] }
 scraper = "0.18.1"
 urlencoding = "2.1.3"
 strum = { version = "0.25", features = ["derive"] }
-strum_macros = {version = "0.25"}
-regex = "1"
+strum_macros = {version = "0.25.3"}
+regex = "1.10.2"
 edit-distance = {version = "2.1.0"}
+chrono = "0.4.31"
+chrono-tz = "0.8.5"
